[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/icons/remove.svg" type="Texture" id=2]
[ext_resource path="res://source/components/command_action.gd" type="Script" id=3]

[node name="command_action" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 22 )
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="container_action" type="HBoxContainer" parent="."]
margin_right = 1276.0
margin_bottom = 22.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option_type" type="OptionButton" parent="container_action"]
margin_right = 100.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
text = "Static"
align = 1
items = [ "Static", null, false, 0, null, "Code", null, false, 1, null, "Signal", null, false, 2, null ]
selected = 0

[node name="input_response" type="LineEdit" parent="container_action"]
margin_left = 104.0
margin_right = 1256.0
margin_bottom = 22.0
size_flags_horizontal = 3
placeholder_text = "Response"
caret_blink = true
caret_blink_speed = 0.5

[node name="input_signal" type="LineEdit" parent="container_action"]
visible = false
margin_left = 674.0
margin_right = 1240.0
margin_bottom = 32.0
size_flags_horizontal = 3
placeholder_text = "Signal"
caret_blink = true
caret_blink_speed = 0.5

[node name="button_code" type="Button" parent="container_action"]
visible = false
margin_left = 674.0
margin_right = 1240.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Show code..."

[node name="button_delete" type="TextureButton" parent="container_action"]
margin_left = 1260.0
margin_top = 3.0
margin_right = 1276.0
margin_bottom = 19.0
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )

[node name="popup_code" type="Popup" parent="."]
margin_left = 1280.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="input_code" type="TextEdit" parent="popup_code"]
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( 500, 300 )
__meta__ = {
"_edit_use_anchors_": false
}
